@@ -20,10 +20,11 @@ import java.net.http.HttpRequest.BodyPublishers;
 import java.net.http.HttpRequest.Builder;
 import java.net.http.HttpResponse;
 import java.net.http.HttpResponse.BodyHandlers;
+import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
-import java.util.Iterator;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
@@ -78,6 +79,7 @@ import net.sourceforge.kolmafia.utilities.FileUtilities;
 import net.sourceforge.kolmafia.utilities.HttpUtilities;
 import net.sourceforge.kolmafia.utilities.InputFieldUtilities;
 import net.sourceforge.kolmafia.utilities.PauseObject;
+import net.sourceforge.kolmafia.utilities.ResettingHttpClient;
 import net.sourceforge.kolmafia.utilities.StringUtilities;
 import net.sourceforge.kolmafia.webui.BarrelDecorator;
 import net.sourceforge.kolmafia.webui.RelayAgent;
@@ -103,7 +105,7 @@ public class GenericRequest implements Runnable {
   private Boolean allowRedirect = null;
 
   public static final Pattern REDIRECT_PATTERN =
-      Pattern.compile("([^\\/]*)\\/(login\\.php.*)", Pattern.DOTALL);
+      Pattern.compile("([^/]*)/(login\\.php.*)", Pattern.DOTALL);
   public static final Pattern JS_REDIRECT_PATTERN =
       Pattern.compile(">\\s*top.mainpane.document.location\\s*=\\s*\"(.*?)\";");
 
@@ -145,14 +147,14 @@ public class GenericRequest implements Runnable {
   public String redirectLocation;
   public String redirectMethod;
 
-  private static HttpClient client;
+  private static ResettingHttpClient client;
   private HttpRequest request;
   protected HttpResponse<InputStream> response;
 
   // Per-login data
 
   private static String userAgent = "";
-  public static final Set<ServerCookie> serverCookies = new LinkedHashSet<ServerCookie>();
+  public static final Set<ServerCookie> serverCookies = new LinkedHashSet<>();
   public static String sessionId = null;
   public static String passwordHash = "";
   public static String passwordHashValue = "";
@@ -175,26 +177,28 @@ public class GenericRequest implements Runnable {
     }
   }
 
-  private static HttpClient getClient() {
+  private static ResettingHttpClient getClient() {
     if (GenericRequest.client != null) {
       return client;
     }
 
-    var builder = HttpUtilities.getClientBuilder();
-    builder.followRedirects(Redirect.NEVER);
-    var built = builder.build();
+    var built = new ResettingHttpClient(GenericRequest::createClient);
     client = built;
     return built;
   }
 
+  private static HttpClient createClient() {
+    return HttpUtilities.getClientBuilder().followRedirects(Redirect.NEVER).build();
+  }
+
   public static void resetClient() {
-    GenericRequest.client = null;
+    if (GenericRequest.client != null) {
+      GenericRequest.client.resetClient();
+    }
   }
 
   private Builder getRequestBuilder(URI uri) {
-    var builder =
-        HttpRequest.newBuilder(uri)
-            .header("Referer", "https://" + GenericRequest.KOL_HOST + "/game.php");
+    var builder = HttpRequest.newBuilder(uri);
 
     if (!this.isExternalRequest && GenericRequest.sessionId != null) {
       builder.header("Cookie", this.getCookies());
@@ -345,7 +349,7 @@ public class GenericRequest implements Runnable {
    * @param newURLString The form to be used in posting data
    */
   public GenericRequest(final String newURLString, final boolean usePostMethod) {
-    this.data = Collections.synchronizedList(new ArrayList<String>());
+    this.data = Collections.synchronizedList(new ArrayList<>());
     if (!newURLString.equals("")) {
       this.constructURLString(newURLString, usePostMethod);
     }
@@ -475,9 +479,9 @@ public class GenericRequest implements Runnable {
     }
 
     String[] tokens = fields.split("&");
-    for (int i = 0; i < tokens.length; ++i) {
-      if (tokens[i].length() > 0) {
-        this.addFormField(tokens[i], encoded);
+    for (String token : tokens) {
+      if (token.length() > 0) {
+        this.addFormField(token, encoded);
       }
     }
   }
@@ -502,7 +506,7 @@ public class GenericRequest implements Runnable {
   public void addFormField(final String name, final String value, final boolean allowDuplicates) {
     this.dataChanged = true;
 
-    String charset = this.isChatRequest ? "ISO-8859-1" : "UTF-8";
+    Charset charset = this.isChatRequest ? StandardCharsets.ISO_8859_1 : StandardCharsets.UTF_8;
 
     String encodedName = name + "=";
     String encodedValue = value == null ? "" : GenericRequest.encodeURL(value, charset);
@@ -603,10 +607,10 @@ public class GenericRequest implements Runnable {
     if (equalIndex != -1) {
       String name = element.substring(0, equalIndex).trim();
       String value = element.substring(equalIndex + 1).trim();
-      String charset = this.isChatRequest ? "ISO-8859-1" : "UTF-8";
+      Charset charset = this.isChatRequest ? StandardCharsets.ISO_8859_1 : StandardCharsets.UTF_8;
 
       // The name may or may not be encoded.
-      name = GenericRequest.decodeField(name, "UTF-8");
+      name = GenericRequest.decodeField(name, StandardCharsets.UTF_8);
       value = GenericRequest.decodeField(value, charset);
 
       // But we want to always submit value encoded.
@@ -616,9 +620,8 @@ public class GenericRequest implements Runnable {
     }
 
     synchronized (this.data) {
-      Iterator<String> it = this.data.iterator();
-      while (it.hasNext()) {
-        if (it.next().equals(element)) {
+      for (String datum : this.data) {
+        if (datum.equals(element)) {
           return;
         }
       }
@@ -638,11 +641,7 @@ public class GenericRequest implements Runnable {
     }
 
     String[] tokens = this.formURLString.substring(index + 1).split("&");
-    List<String> fields = new ArrayList<String>();
-    for (int i = 0; i < tokens.length; ++i) {
-      fields.add(tokens[i]);
-    }
-    return fields;
+    return Arrays.asList(tokens);
   }
 
   public String getFormField(final String key) {
@@ -654,9 +653,7 @@ public class GenericRequest implements Runnable {
   }
 
   private String findField(final List<String> data, final String key, final boolean decode) {
-    for (int i = 0; i < data.size(); ++i) {
-      String datum = data.get(i);
-
+    for (String datum : data) {
       int splitIndex = datum.indexOf("=");
       if (splitIndex == -1) {
         continue;
@@ -671,7 +668,7 @@ public class GenericRequest implements Runnable {
 
       if (decode) {
         // Chat was encoded as ISO-8859-1, so decode it that way.
-        String charset = this.isChatRequest ? "ISO-8859-1" : "UTF-8";
+        Charset charset = this.isChatRequest ? StandardCharsets.ISO_8859_1 : StandardCharsets.UTF_8;
         return GenericRequest.decodeField(value, charset);
       }
       return value;
@@ -685,50 +682,39 @@ public class GenericRequest implements Runnable {
       return null;
     }
 
-    String oldURLString = null;
+    String oldURLString;
     String newURLString = urlString;
 
-    try {
-      do {
-        oldURLString = newURLString;
-        newURLString = URLDecoder.decode(oldURLString, "UTF-8");
-      } while (!oldURLString.equals(newURLString));
-    } catch (IOException e) {
-    }
+    do {
+      oldURLString = newURLString;
+      newURLString = URLDecoder.decode(oldURLString, StandardCharsets.UTF_8);
+    } while (!oldURLString.equals(newURLString));
 
     return newURLString;
   }
 
   public static String decodeField(final String urlString) {
-    return GenericRequest.decodeField(urlString, "UTF-8");
+    return GenericRequest.decodeField(urlString, StandardCharsets.UTF_8);
   }
 
-  public static String decodeField(final String value, final String charset) {
+  public static String decodeField(final String value, final Charset charset) {
     if (value == null) {
       return null;
     }
 
-    try {
-      return URLDecoder.decode(value, charset);
-    } catch (IOException e) {
-      return value;
-    }
+    return URLDecoder.decode(value, charset);
   }
 
   public static String encodeURL(final String urlString) {
-    return GenericRequest.encodeURL(urlString, "UTF-8");
+    return GenericRequest.encodeURL(urlString, StandardCharsets.UTF_8);
   }
 
-  public static String encodeURL(final String urlString, final String charset) {
+  public static String encodeURL(final String urlString, final Charset charset) {
     if (urlString == null) {
       return null;
     }
 
-    try {
-      return URLEncoder.encode(urlString, charset);
-    } catch (IOException e) {
-      return urlString;
-    }
+    return URLEncoder.encode(urlString, charset);
   }
 
   public void removeFormField(final String name) {
@@ -783,9 +769,7 @@ public class GenericRequest implements Runnable {
     String hashField = this.getHashField();
 
     synchronized (this.data) {
-      for (int i = 0; i < this.data.size(); ++i) {
-        String element = this.data.get(i);
-
+      for (String element : this.data) {
         if (element.equals("")) {
           continue;
         }
@@ -829,9 +813,7 @@ public class GenericRequest implements Runnable {
     StringBuilder dataBuffer = new StringBuilder();
 
     synchronized (this.data) {
-      for (int i = 0; i < this.data.size(); ++i) {
-        String element = this.data.get(i);
-
+      for (String element : this.data) {
         if (element.equals("")) {
           continue;
         }
@@ -865,8 +847,7 @@ public class GenericRequest implements Runnable {
 
     int end = urlString.indexOf("&", start);
     if (end == -1) {
-      String prefix = urlString.substring(0, start - 1);
-      return prefix;
+      return urlString.substring(0, start - 1);
     }
 
     String prefix = urlString.substring(0, start);
@@ -1293,7 +1274,9 @@ public class GenericRequest implements Runnable {
       AdventureResult comedyItem = ItemPool.get(comedyItemID, 1);
       String text = null;
 
-      try (Checkpoint checkpoint = new Checkpoint()) {
+      Checkpoint checkpoint = new Checkpoint();
+
+      try (checkpoint) {
         if (KoLConstants.inventory.contains(comedyItem)) {
           // Unequip any 2-handed weapon before equipping an offhand
           if (offhand) {
@@ -1458,7 +1441,7 @@ public class GenericRequest implements Runnable {
     if (!this.data.isEmpty()) {
       if (this.dataChanged) {
         this.dataChanged = false;
-        this.dataString = this.getDataString().getBytes();
+        this.dataString = this.getDataString().getBytes(StandardCharsets.UTF_8);
       }
 
       requestBuilder.header("Content-Type", "application/x-www-form-urlencoded");
@@ -1491,7 +1474,7 @@ public class GenericRequest implements Runnable {
           if (delim) {
             cookies.append("; ");
           }
-          cookies.append(cookie.toString());
+          cookies.append(cookie);
           delim = true;
         }
       }
@@ -1599,11 +1582,25 @@ public class GenericRequest implements Runnable {
       ++this.timeoutCount;
       return !shouldRetry || KoLmafia.refusesContinue();
     } catch (IOException e) {
-      String message = "IOException retrieving server reply (" + this.getURLString() + ").";
+      String errorMessage = e.getMessage();
+      String message =
+          "IOException retrieving server reply ("
+              + this.getURLString()
+              + ")"
+              + (errorMessage == null ? "" : " -- " + errorMessage)
+              + ".";
       if (this.shouldUpdateDebugLog()) {
         StaticEntity.printStackTrace(e, message);
       }
 
+      if (errorMessage != null
+          && (errorMessage.contains("GOAWAY")
+              || errorMessage.contains("parser received no bytes"))) {
+        ++this.timeoutCount;
+        if (this.timeoutCount < TIMEOUT_LIMIT && this.retryOnTimeout()) {
+          return this.sendRequest();
+        }
+      }
       RequestLogger.printLine(MafiaState.ERROR, message);
       this.timeoutCount = TIMEOUT_LIMIT;
       return true;
@@ -1619,7 +1616,7 @@ public class GenericRequest implements Runnable {
    * @return <code>true</code> if the data was successfully retrieved
    */
   private boolean retrieveServerReply() {
-    InputStream istream = null;
+    InputStream istream;
 
     if (this.shouldUpdateDebugLog()) {
       RequestLogger.updateDebugLog("Retrieving server reply...");
@@ -1641,7 +1638,7 @@ public class GenericRequest implements Runnable {
         }
 
         if (this.shouldUpdateDebugLog()) {
-          String message = "IOException retrieving server reply (" + this.getURLString() + ").";
+          String message = "IOException decoding server reply (" + this.getURLString() + ").";
           StaticEntity.printStackTrace(e, message);
         }
 
@@ -1682,7 +1679,7 @@ public class GenericRequest implements Runnable {
                 this.allowRedirect = InputFieldUtilities.confirm(message);
               }
 
-              if (this.allowRedirect.booleanValue()) {
+              if (this.allowRedirect) {
                 this.redirectLocation =
                     this.data.isEmpty() ? location : location + "?" + this.getDisplayDataString();
               }
@@ -1718,7 +1715,7 @@ public class GenericRequest implements Runnable {
       this.setCookies();
     }
 
-    boolean shouldStop = false;
+    boolean shouldStop;
 
     try {
       if (this.responseCode == 200) {
@@ -1735,6 +1732,7 @@ public class GenericRequest implements Runnable {
           KoLmafia.updateDisplay("Waiting 40 seconds for KoL to finish processing...");
           pauser.pause(40 * 1000);
           StorageRequest.emptyStorage(this.formURLString);
+          istream.close();
           return true;
         }
 
@@ -1750,14 +1748,13 @@ public class GenericRequest implements Runnable {
         }
 
         istream.close();
-        shouldStop = (this.redirectLocation != null) ? this.handleServerRedirect() : true;
+        shouldStop = this.redirectLocation == null || this.handleServerRedirect();
       }
     } catch (IOException e) {
       StaticEntity.printStackTrace(e);
       return true;
     }
 
-    istream = null;
     return shouldStop || KoLmafia.refusesContinue();
   }
 
@@ -1896,6 +1893,7 @@ public class GenericRequest implements Runnable {
           || this instanceof ChateauRequest
           || this instanceof DeckOfEveryCardRequest
           || this instanceof GenieRequest
+          || this instanceof LocketRequest
           || this instanceof NumberologyRequest
           || this instanceof UseSkillRequest) {
         this.redirectHandled = true;
@@ -1992,9 +1990,7 @@ public class GenericRequest implements Runnable {
       // You have been redirected to a fight! Here, you need
       // to complete the fight before you can continue.
 
-      if (this == ChoiceManager.CHOICE_HANDLER
-          || this instanceof AdventureRequest
-          || this instanceof BasementRequest) {
+      if (this == ChoiceManager.CHOICE_HANDLER || this instanceof AdventureRequest) {
         this.redirectHandled = true;
         FightRequest.INSTANCE.run(this.redirectLocation);
         return !LoginRequest.isInstanceRunning();
@@ -2399,7 +2395,7 @@ public class GenericRequest implements Runnable {
     }
 
     int itemId = item.getItemId();
-    String itemName = null;
+    String itemName;
     boolean consumed = false;
     String nextAdventure = null;
 
@@ -2793,7 +2789,7 @@ public class GenericRequest implements Runnable {
     }
 
     int choice = ChoiceManager.lastChoice;
-    String name = null;
+    String name;
 
     switch (choice) {
       case 1201:
@@ -2808,6 +2804,10 @@ public class GenericRequest implements Runnable {
       case 1420:
         name = "Cargo Cultist Shorts";
         CargoCultistShortsRequest.registerPocketFight(location);
+        break;
+
+      case 1463:
+        name = "Combat Lover's Locket";
         break;
 
       default:
@@ -2834,7 +2834,7 @@ public class GenericRequest implements Runnable {
     }
 
     int skillId = UseSkillRequest.getSkillId(location);
-    String skillName = null;
+    String skillName;
 
     switch (skillId) {
       case SkillPool.RAIN_MAN:
@@ -3053,7 +3053,7 @@ public class GenericRequest implements Runnable {
         : value;
   }
 
-  public class ServerCookie implements Comparable<ServerCookie> {
+  public static class ServerCookie implements Comparable<ServerCookie> {
     private String name = "";
     private String value = "";
     private String path = "";
